# Googlenet_Tensorrt

./: CMakeLists.txt  README.md
data/: deploy.prototxt  labels.txt
include/: Googlenet_tensorrt.h  NvInferVersion.h
src/: Googlenet_tensorrt.cpp  main.cpp
